modifier espace membres

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -5,6 +5,8 @@
 <h1> Inscription </h1>
 
 {{ form(registerForm) }}
+<br/>
+Vous avez déja un compte ? <a href="{{ path('app_login') }}"> Connectez-vous</a>
 
 </div>
 
