--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,8 +39,12 @@
                     </li>
                 </ul>
                 <div class="speed-menu">
-                    <a href=""><i data-feather="user"></i></a>
+                {% if app.user %}  
+                <a href="{{ path('app_account')}}"><i data-feather="user"></i> {{ app.user.firstname}} </a>
+                {% else %}                 
+                <a href="{{ path('app_login')}}"><i data-feather="user"></i></a>
                     <a href=""><i data-feather="shopping-cart"></i></a>
+                    {% endif %}
                 </div>
             </div>
         </div>
