--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -14,13 +14,15 @@
         <label for="username">Votre email:</label>
         <input  class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required>
 
-        <label for="password mt-3">Votre mot de passe:</label>
+        <label for="password m">Votre mot de passe:</label>
         <input  class="form-control" type="password" id="password" name="_password" required>
       
 
         {# If you want to control the URL the user is redirected to on success
         <input   type="hidden" name="_target_path" value="/account"> #}
 
-        <button class="btn btn-success mt-3" type="submit">Me connecter</button>
+        <button class="btn btn-success mt-3" type="submit">login</button>
     </form>
+    <br/>
+    <a href="{{ path('app_register')}}">inscrire</a>
 {% endblock %}
