--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -4,6 +4,7 @@
 <div class="container m-5">
     <h1> Espace membre privé ! </h1>
     <a href="{{ path('app_logout') }}">Me deconnecter</a>
+    <a href="">Modifier mon mot de passe</a>
 
 
 </div>
