modifier le mot de passe dans BDD

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,8 +3,9 @@
 {% block body %}
 <div class="container m-5">
     <h1> Espace membre privé ! </h1>
-    <a href="{{ path('app_logout') }}">Me deconnecter</a>
-    <a href="{{ path('app_account_modify_pwd') }}">Modifier mon mot de passe</a>
+    <h3> Modification de mon mot de passe</h3>
+    {{ form(modifyPwd)}}
+  
 
 
 </div>
